fix gap cert, fixed border radius

--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ span{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    /* gap: 10px; */
 }
 
 .cert-box{
